data/derived/sp14/progs/unify/prog1558.ml.out
Characters 25-26:
  let _ = pipe2 [(fun x -> x + 3);(fun x-> x + x)] 3asdf;;
                           ^
Error: This expression has type 'a -> 'b
       but an expression was expected of type int
